# liminate

./: .gitignore  AGENTS.md  BUILD_PLAN.md  CLAUDE.md  README.md  README_public.md  RELEASING.md  pyproject.toml
audit/: 03_ground_system_correction.md
benchmarks/: _phase3_interpreter_bench.py  phase3-interpreter-post.md
brand/: USAGE.md
cobol-experiment/: .gitignore  README.md
docs/: DEV_README.md  VERSIONING.md  inscript_gap_inventory_2026_05_12_v1_dogfooding.md  inscript_gap_inventory_2026_05_12_v2a_dogfooding.md
examples/: dogfood_1_corpus_summary.actual.txt  dogfood_1_corpus_summary.expected.txt  dogfood_1_corpus_summary.insc  dogfood_1_corpus_summary.limn  dogfood_2_per_document.actual.txt  dogfood_2_per_document.expected.txt  dogfood_2_per_document.insc  dogfood_2_per_document.limn  dogfood_3_compositions.actual.txt  dogfood_3_compositions.expected.txt  dogfood_3_compositions.insc  dogfood_3_compositions.limn  dogfood_3b_from_chaining.actual.txt  dogfood_3b_from_chaining.insc  dogfood_4_compound_conditions.actual.txt  dogfood_4_compound_conditions.expected.txt  dogfood_4_compound_conditions.insc  dogfood_5_each_iterator.actual.txt  dogfood_5_each_iterator.expected.txt  dogfood_5_each_iterator.insc  dogfood_5_each_iterator.limn  dogfood_5b_each_edges.actual.txt  dogfood_5b_each_edges.insc  dogfood_5c_each_pronoun_outside.actual.txt  dogfood_5c_each_pronoun_outside.limn  dogfood_5d_each_on_scalar.actual.txt  dogfood_5d_each_on_scalar.limn  dogfood_6_chained.actual.txt  dogfood_6_chained.expected.txt  dogfood_6_chained.insc  dogfood_6_chained.limn  dogfood_7_errors.actual.txt  dogfood_7_errors.expected.txt  dogfood_7_errors.insc  dogfood_7_errors.limn  dogfood_8_v2a_features.actual.txt  dogfood_8_v2a_features.insc  dogfood_8_v2a_features.limn  dogfood_assign_delegation.limn  dogfood_expect_divergence.limn  (+53 more)
tests/: _v3a_helpers.py  conftest.py  test_about.py  test_adapter.py  test_analyzer.py  test_arithmetic.py  test_assign.py  test_because.py  test_build.py  test_checker.py  test_cli_exit_code.py  test_compare.py  test_composition_param_literals.py  test_conformance_fit.py  test_contradiction_detection.py  test_date.py  test_decay_tick_adapter.py  test_define.py  test_descending_ranges.py  test_empty_list.py  test_expect.py  test_extrema.py  test_file_watcher_adapter.py  test_forbid.py  test_fuzzer.py  test_inherited.py  test_integration.py  test_integration_add.py  test_integration_empty_list.py  test_integration_includes_remove.py  test_integration_research_pack.py  test_integration_session_pack.py  test_integration_v2_pack_extension.py  test_integration_v3a.py  test_integration_v4a.py  test_interpreter.py  (+24 more)
(+1744 files in other folders)
