[project]
name = "liminate"
version = "0.16.0"
description = "A prose-as-syntax language designed from the human end."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "R. Michael Thomas" }
]
keywords = ["prose-as-syntax", "natural-language", "interpreter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Repository = "https://github.com/rmichaelthomas/liminate"

[project.scripts]
liminate = "liminate.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]
build = ["pyinstaller>=6.0"]
check = ["z3-solver>=4.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fuzzer: property-based differential fuzzer tests (may be slow)",
]
